# internal/api/models/migrate.go
@@ -1,7 +1,7 @@
 package models
 
 func Migrate() error {
-	err := DB.AutoMigrate(&User{}, &Nonce{})
+	err := DB.AutoMigrate(&User{}, &Nonce{}, &RefreshToken{})
 	if err != nil {
 		return err
 	}
